# 3D-engine

./: 3dvfunc(1).cpp  3dvfunc.cpp  CMakeLists.txt  LICENSE
include/: 3dvfunc.h  vfunc3d.h
include/glad/: glad.h
src/: 3dvfunc.cpp  glad.c  main.cpp
